# postlayer-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: db.py  main.py  security.py  supabase.py
app/api/: router.py
app/api/dependencies/: auth.py  db.py
app/api/v1/: ai.py  assets_v1.py  auth.py  brand.py  brands_v1.py  components_v1.py  creative.py  organizations.py  presets.py  projects_v1.py  team.py  templates.py  templates_v1.py
app/application/contracts/: providers.py
app/application/presets/: social.py  templates.py
app/application/services/: versioning.py
app/domain/brand/: models.py
app/domain/common/: types.py
app/domain/creative/: constants.py  models.py
app/domain/template/: models.py
app/export_engine/: contracts.py  manifest.py  service.py
app/infra/: config.py
app/infra/db/: base.py  external_tables.py  models.py  seeds.py  session.py
app/infra/providers/: local_ai.py  openai_ai.py  supabase.py
app/rendering/: contracts.py  svg_renderer.py
app/review_engine/: contracts.py  rules.py
app/schemas/: auth.py  brand.py  common.py  creative.py  memory.py  orchestration.py  templates.py
docs/adr/: 0001-frontend-nextjs.md  0002-renderer-svg-first.md  0003-domain-owned-postgres.md
migrations/: env.py
migrations/versions/: 20260312_0001_create_product_domain.py  20260312_0002_add_export_manifest.py
tests/: test_domain_metadata.py  test_export_engine.py  test_langgraph_orchestration.py  test_project_templates.py  test_schemas.py  test_seed_templates.py  test_session_bootstrap.py  test_supabase_provider.py
(+3 files in other folders)
