[project]
name = "postlayer-api"
version = "0.1.0"
description = "Backend API for PostLayer"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "httpx>=0.28.1",
  "pillow>=11.3.0",
  "sqlalchemy>=2.0.41",
  "alembic>=1.16.4",
  "psycopg[binary]>=3.2.9",
  "langgraph>=0.6.11",
  "openai>=1.108.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true
